# QtExampleLibrary

./: README.md
MyLib/: CMakeLists.txt  mylib.cpp
MyLibTest/: CMakeLists.txt  main.cpp
Release/include/: mylib.h
Release/lib/: MyLib.lib
